todo-app/manifests/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-volume
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo-app
          image: thesamsai/todo-app:v4
          volumeMounts:
          - name: image-volume
            mountPath: /shared/image
